# test1

./: buildozer.spec  main.py  pyproject.toml  requirements.txt  signin.kv
.github/workflows/: android.yml  build-apk.yml
src/campus_sign_in/: __init__.py  main.py
